# slice-by-8-rs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: Build.yml  Clippy.yml  Test.yml
src/: algorithm.rs  crc32.rs  crc32_hasher.rs  hasher.rs  lib.rs  lookup_table.rs  slice_by_8.rs
src/crc32/: hasher.rs  mod.rs
src/crc32c/: hasher.rs  mod.rs
