[package]
name = "slice-by-8"
version = "1.0.5"
authors = ["Julian LALU"]
edition = "2021"
license = "MIT"
description = "HUD Software's Rust improved implementation of the Intel Slice-By-8 algorithm."
repository = "https://github.com/HUD-Software/slice-by-8-rs"  
keywords = ["hash", "string", "gamedev", "hasher", "hashmap"]
categories = ["algorithms", "no-std"]

[build-dependencies]
cc = "1.0"
